# nozzle

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  DEVELOPMENT.md  LICENSE  PLAN.md  README-SDK.md  README.md
.cache/clangd/index/: device.cpp.B03E03191625AEE8.idx  device.hpp.EDD3D0026AC56044.idx  discovery.cpp.10F95C33F138974E.idx  discovery.hpp.7F4E4F8A76B95BA6.idx  frame.cpp.0FBA1610985EB102.idx  frame.hpp.CADF206A75860144.idx  frame_helpers.hpp.0F077C506E100183.idx  metadata.cpp.C1A55844EB7630DD.idx  metal.hpp.3D50706D522B485D.idx  metal_backend.mm.54E89B48745E0F8F.idx  metal_helpers.hpp.4522368D380D968D.idx  metal_sync.mm.C600BAF70873AA61.idx  metal_texture.mm.A96E1C1344E9E1A2.idx  nozzle_c.cpp.FCA24F459F2E5FAF.idx  receiver.cpp.2CA131C51E3298A1.idx  receiver.hpp.8E02207F7BA1484B.idx  registry.cpp.C83B8BACE4DFEAAB.idx  registry.hpp.AA2414611544BE94.idx  result.hpp.FF56A16930344A6F.idx  sender.cpp.9C80F4A08EBCD9BF.idx  sender.hpp.EE116C81DB4E8713.idx  shared_state.hpp.B3F5D70A3D1F7F13.idx  test_discovery.cpp.819FAD9873A6F693.idx  test_main.cpp.014F851240766FFD.idx  test_registry.cpp.A047E1C6E2426E30.idx  texture.cpp.724D5A656FA6C564.idx  texture.hpp.E0391B980C4771C9.idx  types.hpp.20B24ABADB6067B3.idx
.github/workflows/: ci.yml
build-nozzle/: CTestTestfile.cmake  DartConfiguration.tcl  nozzleConfig.cmake
build-nozzle/examples/: example_receiver  example_sender
build-nozzle/tests/: CTestTestfile.cmake  nozzle_integration_tests  nozzle_integration_tests-b12d07c_include.cmake  nozzle_integration_tests-b12d07c_tests.cmake  nozzle_tests  nozzle_tests-b12d07c_include.cmake  nozzle_tests-b12d07c_tests.cmake
cmake/: nozzleConfig.cmake.in
docs/: backend-capabilities.md
examples/: CMakeLists.txt  example_receiver.cpp  example_sender.cpp
include/bbb/nozzle/: device.hpp  discovery.hpp  frame.hpp  nozzle.hpp  nozzle_c.h  pixel_access.hpp  receiver.hpp  result.hpp  sender.hpp  texture.hpp  types.hpp
include/bbb/nozzle/backends/: d3d11.hpp  linux.hpp  metal.hpp  opengl.hpp
include/nozzle/: backend_capabilities.hpp  channel_swizzle.hpp  config.hpp  device.hpp  discovery.hpp  format_convert.hpp  format_resolve.hpp  frame.hpp  nozzle.hpp  nozzle_c.h  pixel_access.hpp  receiver.hpp  result.hpp  sender.hpp  texture.hpp  types.hpp
include/nozzle/backends/: d3d11.hpp  linux.hpp  metal.hpp  opengl.hpp
scripts/: check_no_exceptions.sh  ci-status.sh  tag-all.sh
src/: shared_state.hpp
src/backends/: backend_dispatch.hpp
src/backends/d3d11/: d3d11_backend.cpp  d3d11_backend_dispatch.hpp  d3d11_helpers.hpp  d3d11_sync.cpp  d3d11_texture.cpp
src/backends/linux/: linux_backend_dispatch.hpp  linux_fd_transfer.hpp  linux_helpers.hpp  linux_texture.cpp
src/backends/metal/: metal_backend.mm  metal_backend_dispatch.hpp  metal_channel_swap.mm  metal_helpers.hpp  metal_sync.mm  metal_texture.mm
src/backends/opengl/: opengl_backend.cpp
src/c_api/: nozzle_c.cpp  nozzle_c_detail.hpp  nozzle_c_types.hpp
src/common/: backend_capabilities.cpp  backend_capabilities_docs.hpp  channel_swizzle.cpp  channel_swizzle_vimage.cpp  device.cpp  discovery.cpp  format_convert.cpp  format_convert_f16c.cpp  format_convert_neon.cpp  format_convert_sse2.cpp  format_convert_vimage.cpp  format_resolve.cpp  frame.cpp  frame_helpers.hpp  ipc.cpp  ipc.hpp  metadata.cpp  metadata.hpp  pixel_access.cpp  receiver.cpp  registry.cpp  registry.hpp  safe_math.hpp  sender.cpp  sender_detail.hpp  sender_fallback.hpp  sender_metadata.hpp  shared_metadata.hpp  shared_state.hpp  texture.cpp
tests/: CMakeLists.txt
tests/c_api/: test_backend_capabilities.cpp  test_dmabuf_publish.cpp  test_error_codes.cpp  test_fallback_info.cpp  test_fill_alpha.cpp  test_swizzle.cpp
tests/integration/: d3d11_cross_process_sender.cpp  metal_direct_cross_process_sender.mm  test_c_api_native_metadata.mm  test_c_sender_desc.cpp  test_checked_writable_unlock.cpp  test_cpp_sender_desc.cpp  test_cross_process.cpp  test_d3d11_device_injection.cpp  test_integration_fallback_getters.cpp  test_metal_device_injection.mm  test_metal_format_mapping.cpp  test_metal_native_publish.mm  test_publish_mismatch.cpp
tests/unit/: test_backend_capabilities.cpp  test_channel_swizzle.cpp  test_discovery.cpp  test_format_convert.cpp  test_format_resolve.cpp  test_registry.cpp  test_resolved_format.cpp  test_sender_metadata.cpp  test_shared_metadata.cpp
tools/: test_iosurface_formats  test_iosurface_formats.mm  test_rgba16unorm  test_rgba16unorm.mm
